force-app/main/default/objects/Follow_up__c/Follow_up__c.object-meta.xml
<CustomObject>
    <label>Follow up</label>
    <nameField>
        <displayFormat>task-{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Follow up</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>