force-app/main/default/objects/Follow_up__c/fields/Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>Activity_ID__c</fullName>
    <externalId>true</externalId>
    <label>Follow-up ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>