force-app/main/default/objects/Follow_up__c/fields/Assigned_SA__c.field-meta.xml
<CustomField>
    <fullName>Assigned_SA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relation to the SA</description>
    <label>Assigned SA</label>
    <referenceTo>Sales_Assistant__c</referenceTo>
    <relationshipLabel>Follow up</relationshipLabel>
    <relationshipName>Follow_up</relationshipName>
    <type>Lookup</type>
</CustomField>