force-app/main/default/objects/Follow_up__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Follow up2</relationshipLabel>
    <relationshipName>Follow_up</relationshipName>
    <type>Lookup</type>
</CustomField>