force-app/main/default/objects/Follow_up__c/fields/Created_By_SA__c.field-meta.xml
<CustomField>
    <fullName>Created_By_SA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CreatedBy</label>
    <referenceTo>Sales_Assistant__c</referenceTo>
    <relationshipLabel>Follow up (CreatedBy Employee)</relationshipLabel>
    <relationshipName>Follow_up2</relationshipName>
    <type>Lookup</type>
</CustomField>