force-app/main/default/objects/Follow_up__c/fields/Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date__c</fullName>
    <label>Creation date &amp; time</label>
    <type>DateTime</type>
</CustomField>