force-app/main/default/objects/Follow_up__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Due date</description>
    <label>Due date</label>
    <type>Date</type>
</CustomField>