force-app/main/default/objects/Follow_up__c/fields/Flag_Influenced_Sale_Followup__c.field-meta.xml
<CustomField>
    <fullName>Flag_Influenced_Sale_Followup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag - Follow-up Influenced Sale</label>
    <type>Checkbox</type>
</CustomField>