force-app/main/default/objects/Follow_up__c/fields/Follow_up_type__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_type__c</fullName>
    <description>Follow-up type</description>
    <label>Follow-up type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Birthday</fullName>
            </value>
            <value>
                <fullName>Consignment</fullName>
            </value>
            <value>
                <fullName>Drive-to-store</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Engage-build-relationship</fullName>
            </value>
            <value>
                <fullName>Experience-event</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>New-collection</fullName>
            </value>
            <value>
                <fullName>Nurture-vic-relationship</fullName>
            </value>
            <value>
                <fullName>Re-enagage</fullName>
            </value>
            <value>
                <fullName>Retain</fullName>
            </value>
            <value>
                <fullName>Servicing</fullName>
            </value>
            <value>
                <fullName>Thank-you-for-your-purchase</fullName>
            </value>
            <value>
                <fullName>Todo</fullName>
            </value>
            <value>
                <fullName>Welcome drive to store</fullName>
            </value>
            <value>
                <fullName>Welcome-follow-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>