force-app/main/default/objects/Follow_up__c/fields/Influenced_Sales_Followup__c.field-meta.xml
<CustomField>
    <fullName>Influenced_Sales_Followup__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Follow-up Influenced Sales (€ Net)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>