force-app/main/default/objects/Follow_up__c/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <label>Modified date &amp; time</label>
    <type>DateTime</type>
</CustomField>