force-app/main/default/objects/Follow_up__c/fields/Tech_Source_LastUpdate__c.field-meta.xml
<CustomField>
    <fullName>Tech_Source_LastUpdate__c</fullName>
    <label>Tech Source Last Update</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>