force-app/main/default/objects/Follow_up__c/fields/Tulip_ID__c.field-meta.xml
<CustomField>
    <fullName>Tulip_ID__c</fullName>
    <externalId>true</externalId>
    <label>Tulip ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>